--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,12 @@
-﻿altair==4.1.0
-anyio==3.6.2
-appdirs==1.4.4
-attrs==23.1.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.12.2
-blinker==1.6.2
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-cryptography==40.0.2
-cycler==0.11.0
-db-dtypes==1.1.1
-decorator==5.1.1
-entrypoints==0.4
-fastapi==0.88.0
-fonttools==4.38.0
-frozendict==2.3.7
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-auth==2.17.3
-google-cloud==0.34.0
-google-cloud-bigquery==3.10.0
-google-cloud-core==2.3.2
-google-crc32c==1.5.0
-google-resumable-media==2.5.0
-googleapis-common-protos==1.59.0
-grpcio==1.54.0
-grpcio-status==1.54.0
-h11==0.14.0
-html5lib==1.1
-idna==3.4
-importlib-metadata==6.0.0
-importlib-resources==5.12.0
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-kiwisolver==1.4.4
-lxml==4.9.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib==3.5.3
-mdurl==0.1.2
-multitasking==0.0.11
-mysql-connector-python==8.0.32
-nltk==3.8.1
-numpy==1.21.6
-packaging==23.1
-pandas==1.3.5
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
-plotly==5.14.1
-protobuf
-proto-plus==1.22.2
-pyarrow==11.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==1.10.2
-pydeck==0.8.1b0
-Pygments==2.15.1
-Pympler==1.0.1
-PyMySQL==1.0.2
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-regex==2022.10.31
-requests==2.28.2
-rich==13.3.4
-rsa==4.9
-six==1.10.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.4.1
-starlette==0.22.0
-streamlit==1.21.0
-tenacity==8.2.2
-textblob==0.17.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-tqdm==4.65.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==4.3
-urllib3==1.26.15
-uvicorn==0.20.0
-validators==0.20.0
-watchdog==3.0.0
-webencodings==0.5.1
-wordcloud==1.8.2.2
-yfinance==0.2.18
-zipp==3.15.0
+streamlit
+pandas
+google-cloud-bigquery
+plotly
+wordcloud
+matplotlib
+time 
+requests
+textblob 
+os 
+altair
+numpy
